--- a/desafioUpMedal/store/blocks/footer.jsonc
+++ b/desafioUpMedal/store/blocks/footer.jsonc
@@ -2,22 +2,18 @@
   "footer": {
     "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
   },
-  "footer-layout.desktop": { 
-    "children": [
-      "sticky-layout#footer"
-    ]
+  "footer-layout.desktop": {
+    "children": []
   },
   "sticky-layout#footer": {
     "props": {
       "blockClass": "sticky-footer",
-      "position":"bottom"
-  },
+      "position": "bottom"
+    },
     "children": ["flex-layout.row#footer"]
   },
-  "footer-layout.mobile": { 
-    "children": [
-      "sticky-layout#footer"
-    ]
+  "footer-layout.mobile": {
+    "children": ["sticky-layout#footer"]
   },
   "flex-layout.row#footer": {
     "props": {
@@ -26,18 +22,14 @@
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
       "fullWidth": true,
-      "blockClass":"flexrowcontentfooter"
+      "blockClass": "flexrowcontentfooter"
     },
-    "children": [
-      "flex-layout.col#suportefooter"
-    ]
+    "children": ["flex-layout.col#suportefooter"]
   },
   "flex-layout.col#suportefooter": {
-    "children": [
-      "logo#footersuporte"
-    ],
-    "props":{
-      "blockClass":"flexcolcontentfooter"
+    "children": ["logo#footersuporte"],
+    "props": {
+      "blockClass": "flexcolcontentfooter"
     }
   },
   "logo#footersuporte": {
@@ -46,7 +38,7 @@
       "href": "https://api.whatsapp.com/send?phone=5521995958585&text=%C3%89%20sempre%20um%20prazer%20falar%20com%20voc%C3%AA.%20Diga%20como%20podemos%20ajudar.....",
       "url": "assets/suporte.png",
       "width": "80",
-      "blockClass":"logofooter"
+      "blockClass": "logofooter"
     }
   }
 }
