Iteração do banner e exclusão do footer

--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -40,7 +40,9 @@
   "slider-layout#home": {
     "children": [
       "image#banner1",
-      "image#banner2"
+      "image#banner2",
+      "image#banner3",
+      "image#banner4"
     ],
     "props": {
       "blockClass": "imagensBanner",
@@ -56,15 +58,29 @@
   "image#banner1": {
     "props": {
       "src": "assets/banner1.png",
-      "maxWidth": "60%",
+      "maxWidth": "100vw",
       "blockClass": "banner1"
     }
   },
   "image#banner2": {
     "props": {
-      "src": "assets/banner2.png",
-      "maxWidth": "60%",
-      "blockClass": "banner2"
+      "src": "assets/banner1.png",
+      "maxWidth": "100vw",
+      "blockClass": "banner1"
+    }
+  },
+  "image#banner3": {
+    "props": {
+      "src": "assets/banner1.png",
+      "maxWidth": "100vw",
+      "blockClass": "banner1"
+    }
+  },
+  "image#banner4": {
+    "props": {
+      "src": "assets/banner1.png",
+      "maxWidth": "100vw",
+      "blockClass": "banner1"
     }
   },
 
