Limpeza geral e avanço do estilo da Home.

--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -53,8 +53,9 @@
       "isFullModeStyle": true,
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473020412620840/bg1.png",
-      "headline": "Clearance Sale",
-      "callToActionText": "DISCOVER",
+      "headline": "Comece a criar com a AWS ainda hoje",
+      "subhead": "Por acaso você está buscando potência computacional, armazenamento de banco de dados, entrega de conteúdo ou outras funcionalidades? A AWS tem os serviços para ajudar a acriar aplicações sofisticadas com mais flexibilidade, escalabilidade e confiabilidade",
+      "callToActionText": "Comece a usar gratuitamente",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card-example",
       "textAlignment": "center"
@@ -66,8 +67,9 @@
       "isFullModeStyle": true,
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473022652379186/bg2.png",
-      "headline": "Clearance Sale",
-      "callToActionText": "DISCOVER",
+      "headline": "Conheça a plataforma, os produtos de nuvem e os recursos da AWS",
+      "callToActionMode": "link",
+      "callToActionText": "Comece a usar",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card-example",
       "textAlignment": "center"
@@ -79,8 +81,10 @@
       "isFullModeStyle": true,
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473025252847616/bg3.jpg",
-      "headline": "Clearance Sale",
-      "callToActionText": "DISCOVER",
+      "headline": "Modernize sua infraestrutura de dados",
+      "subhead": "Migre de datastores autogerenciados para serviços da AWS totalmente gerenciados para economizar tempo, custos e melhorar a produtividade",
+      "callToActionMode": "link",
+      "callToActionText": "Saiba mais",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card-example",
       "textAlignment": "center"
@@ -92,8 +96,10 @@
       "isFullModeStyle": true,
       "textPosition": "center",
       "imageUrl": "https://cdn.discordapp.com/attachments/879845756310282330/880473026301407302/bg4.png",
-      "headline": "Clearance Sale",
-      "callToActionText": "DISCOVER",
+      "headline": "Hospede aplicativos web estáticos",
+      "subhead": "O AWS Amplify oferece um fluxo de trabalho simples baseado em GIT para implantar aplicativos Web estáticos na AWS",
+      "callToActionMode": "link",
+      "callToActionText": "Saiba mais",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card-example",
       "textAlignment": "center"
